--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Portfolio Agustin Mansilla E",
-  "name": "React portfolio-ChatBot",
+  "short_name": "Portfolio Agustin Mansilla",
+  "name": "React portfolio ChatBot",
   "icons": [
     {
       "src": "favicon.ico",
